--- a/backend/env.example
+++ b/backend/env.example
@@ -2,3 +2,14 @@
 GOOGLE_API_KEY=your_gemini_api_key_here
 # Alternatively, you can use:
 # GEMINI_API_KEY=your_gemini_api_key_here
+
+# URL do mock-api para o MCP
+MOCK_API_BASE_URL=http://localhost:3001
+
+# Como executar o servidor MCP (mcp-mock-api)
+# Opção 1: usar comando e args
+# MCP_MOCK_CMD=tsx
+# MCP_MOCK_ARGS=/Users/jeangoncalves/workspace/newAgent/mcp-mock-api/src/server.ts
+
+# Opção 2: usar comando completo (tem precedência)
+# MCP_MOCK_FULL_COMMAND=tsx /Users/jeangoncalves/workspace/newAgent/mcp-mock-api/src/server.ts
